# tattico_api

./: .gitignore  Cargo.toml  accounts.json  cert.pem  key.pem
.github/workflows/: general.yml
src/: lib.rs  main.rs
src/accounting/: account.rs  entry.rs  mod.rs  repository.rs
src/controllers/: entries.rs  mod.rs
src/handlers/: entries.rs
static/: index.html
tests/: health_check_test.rs
tests/api/: main.rs
tests/api/controllers/: entries_test.rs  mod.rs
