[package]
name = "tattico"
version = "0.1.0"
authors = ["Felipe Rodrigues <felipe@crafters.cc>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tattico"

[dependencies]
actix-files = "0.6.0-beta.2"
actix-web = { version = "4.0.0-beta.3", features = ["openssl"] }
actix-tls = "=3.0.0-beta.3"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5"
env_logger = "0.8"
openssl = { version = "0.10.32", features = ["v110"] }
rust_decimal = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.1.0"
claim = "0.5.0"
reqwest = { version = "0.11.1", features = ["rustls-tls-native-roots"]}
tokio = "1.2.0"
